<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProductFacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="tabbar_default">Menu</string>
    <string name="gl_wait">请稍等</string>
    <string name="gl_choose_title">请选择图片</string>

    <!-- led pro -->
    <string name="font_cabin_bold">fonts/Cabin-Bold.ttf</string>
    <string name="font_cabin_semibold">fonts/Cabin-SemiBold.ttf</string>
    <string name="font_cabin_regular">fonts/Cabin-Regular.otf</string>
    <string name="font_helvetica_neue">fonts/Helvetica-Neue.ttf</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_led_base_list">LedBaseListActivity</string>
    <string name="title_activity_home">PRODUCT FACT</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_project_detail">ProjectDetail</string>
    <string name="title_activity_subfolder_detail">SubfolderDetail</string>
    <string name="title_activity_setting">Settings</string>

    <!-- text -->
    <string name="text_summary_product">Products</string>
    <string name="text_summary_watt">Watt/Month</string>
    <string name="text_summary_tco">Total cost of ownership TCO</string>
    <string name="text_sel_img">Choose a photo</string>
    <string name="title_attr_pro_info">Base Info.</string>
    <string name="title_attr_pro_manufacture">Manufacture</string>
    <string name="title_attr_pro_perf">Performance</string>
    <string name="title_attr_pro_function">Function</string>
    <string name="title_attr_pro_others">Others</string>
    <string name="text_attr_size">Size:</string>
    <string name="text_attr_manufacture">Manufacture:</string>
    <string name="text_attr_warranty">Warranty:</string>
    <string name="text_attr_lumen">Lumen output:</string>
    <string name="text_attr_watt">Input watt:</string>
    <string name="text_attr_use_loc">Use Location:</string>
    <string name="text_attr_mounting_base">Mounting_base:</string>

    <!-- hint -->
    <string name="project_note_hints">Please add your free notes here</string>
    <string name="title_notes">Notes</string>
    <string name="title_summary">Summary</string>
    <string name="title_subfolder">Subfolder</string>
    <string name="title_setting_notifications">Notifications</string>
    <string name="title_setting_privacy">Privacy</string>
    <string name="title_setting_general">General</string>
    <string name="title_setting_about">About</string>
    <string name="hint_input_phone">Enter your cellphone number here</string>
    <string name="hint_input_verifycode">Enter your verifycode here</string>
    <string name="hint_input_password">Enter your password here</string>
    <string name="hint_input_barcode">Please input bar code</string>
    <!-- btn name -->
    <string name="btn_or_scan">Or scan QR/Bar code</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_forget_pwd">Forget Password?</string>
    <string name="btn_register">Join Now</string>
    <string name="btn_login">Log In</string>
    <string name="btn_filter_categories">Product Categories</string>
    <string name="btn_filter_location">Use Location</string>
    <string name="btn_filter_mounting">Mounting Base</string>
    <string name="btn_filter_Subcatego">Subcatego</string>
    <string name="btn_filter_size">Product Size</string>
    <string name="title_filter_lumen">Lumen Output(lm)</string>
    <string name="title_filter_watt">Input Wattage(W)</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="title_filter_all">All</string>
    <string name="scan_qrcode">Align QR/Bar code within frame to scan</string>
    <string name="scan_onecode">Align QR/Bar code within frame to scan</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_one">Scan Bar Code</string>
    <string name="btn_input_bar_code">or input bar code here</string>
    <string name="btn_add_to_project">Add this product to a project</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_get_code">Get verifycode</string>
    <string name="misp_save">Save</string>
    <string name="btn_save">Save</string>
    <string name="btn_view">View</string>
    <string name="btn_update">Update</string>
    <string name="btn_export_pdf">Export</string>
    <string name="btn_sel_album">From album</string>
    <string name="btn_sel_take">Take a photo</string>
    <!-- others -->
    <string name="scan_scan">扫一扫</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_content">扫描内容</string>
    <string name="scan_back">返回</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机可能被占用，您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>

    <!-- activity label -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_filter_refine">REFINE BY</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_find_pwd">Find password</string>

    <!-- view -->
    <string name="progress_msg_loading">Loading……</string>
    <string name="progress_msg_processing">Processing……</string>

    <!-- info constant -->
    <string name="info_user_head">Head</string>
    <string name="info_user_realname">RealName</string>
    <string name="info_user_cellphone">Cellphone</string>
    <string name="info_user_email">E-mail</string>
    <string name="info_user_company_name">Company</string>
    <string name="info_energy_consumption">Energy consumption</string>
    <string name="info_product_quality">Product quality</string>
    <string name="info_user_evaluation">User evaluation</string>

    <!-- error msg -->
    <string name="msg_input_null">Input Empty</string>
    <string name="msg_send_code_success">Verify code has been sent</string>
    <string name="title_activity_filter_list">FilterListActivity</string>
    <string name="title_activity_project_list">BUILD A PROJECT</string>
    <string name="title_activity_user_register">UserRegisterActivity</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_img_select">ImgSelectActivity</string>
    <string name="title_activity_product_eval">Rating</string>
    <string name="title_activity_pro_eval_create">Evaluation</string>
    <string name="title_activity_pro_attrs">Full attrs</string>
    <string name="title_activity_bar_input">BarCode</string>
    <string name="title_activity_result">Scan result</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_filter_group">FilterGroupActivity</string>

</resources>
