<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:divider="@drawable/divider_v"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backcolor"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_sel_img"
        android:textColor="@color/black"
        android:textSize="@dimen/head_font_size_sm" />

    <Button
        android:id="@+id/gl_choose_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_item"
        android:padding="10dp"
        android:text="@string/btn_sel_album"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/gl_choose_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_item"
        android:padding="10dp"
        android:text="@string/btn_sel_take"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/gl_choose_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_item"
        android:padding="10dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>