<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/misp_tilte_with_back_layout" />

        <Button
            android:id="@+id/setting_notifications_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:drawableRight="@drawable/btn_forward_icon"
            android:gravity="left|center_vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/title_setting_notifications"
            android:textSize="@dimen/content_font_size" />

        <Button
            android:id="@+id/setting_privacy_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:drawableRight="@drawable/btn_forward_icon"
            android:gravity="left|center_vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/title_setting_privacy"
            android:textSize="@dimen/content_font_size" />

        <Button
            android:id="@+id/setting_general_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:drawableRight="@drawable/btn_forward_icon"
            android:gravity="left|center_vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/title_setting_general"
            android:textSize="@dimen/content_font_size" />

        <Button
            android:id="@+id/setting_about_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:drawableRight="@drawable/btn_forward_icon"
            android:gravity="left|center_vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/title_setting_about"
            android:textSize="@dimen/content_font_size" />

        <Button
            android:id="@+id/setting_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/common_item"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/btn_logout"
            android:textSize="@dimen/content_font_size" />

    </LinearLayout>

</RelativeLayout>
