<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/misp_tilte_with_back_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp" >

        <EditText
            android:id="@+id/user_register_country"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="country code"
            android:textSize="@dimen/content_font_size_sm" />

        <EditText
            android:id="@+id/user_register_txt_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/user_register_country"
            android:autoText="false"
            android:background="@null"
            android:capitalize="none"
            android:ellipsize="end"
            android:ems="11"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/content_font_size_sm" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/user_register_txt_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoText="false"
                android:background="@null"
                android:capitalize="none"
                android:ems="11"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_input_verifycode"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/content_font_size_sm" />

            <Button
                android:id="@+id/user_register_btn_verifyCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/focuscolor"
                android:text="@string/btn_get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/content_font_size_sm" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="30dp" >

        <EditText
            android:id="@+id/user_register_txt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:capitalize="none"
            android:ems="11"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_input_password"
            android:password="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/content_font_size_sm" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp" >

        <Button
            android:id="@+id/user_register_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/common_btn"
            android:text="@string/btn_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/content_font_size" />
    </RelativeLayout>

</LinearLayout>