<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/title_l"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/misp_title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/btn_back"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:minHeight="22dp"
                android:minWidth="16dp"
                android:paddingLeft="10dp"
                android:textColor="@color/theme_text_color"
                android:textSize="@dimen/top_head_btn_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/project_detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/title_r"
            android:layout_toRightOf="@+id/title_l"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/misp_title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rectangle_corner"
                android:gravity="center"
                android:maxLength="16"
                android:singleLine="true"
                android:text="title"
                android:textColor="#050505"
                android:textSize="@dimen/head_font_size_sm" />

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:visibility="visible" >

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/icon_edit_bage" />

            </FrameLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/title_r"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/misp_title_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableRight="@drawable/icon_pdf"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="24dp"
                android:minWidth="24dp"
                android:textColor="@color/theme_text_color"
                android:textSize="@dimen/top_head_btn_size"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_nocorner"
        android:gravity="left|center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/title_notes"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/project_detail_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:gravity="top|left"
        android:hint="@string/project_note_hints"
        android:minLines="3"
        android:padding="18dp"
        android:textSize="13sp" >

    </TextView>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_nocorner"
        android:gravity="left|center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/title_summary"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/img_rl"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/project_detail_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5/14"
                    android:textColor="@color/themecolor"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_summary_product"
                    android:textColor="@color/themecolor"
                    android:textSize="13dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/project_detail_watt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Watt/Month"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_summary_watt"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/project_detail_tco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TCO"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_summary_tco"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/img_rl"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_border" >

            <ImageView
                android:id="@+id/project_detail_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_nocorner"
        android:padding="5dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/title_subfolder"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/project_detail_add_btn"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_plus_green"
            android:minHeight="12dp"
            android:minWidth="12dp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/project_detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
