<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <RelativeLayout
            android:id="@+id/input_area"
            android:layout_width="match_parent"
            android:layout_height="120dp" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/white" >
            </FrameLayout>

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@android:color/transparent"
                android:divider="@drawable/divider_v"
                android:orientation="vertical"
                android:showDividers="middle" >

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_login_user"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content_font_size" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_login_pwd"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/content_font_size" />

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_btn"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/content_font_size" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/login_find_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/btn_forget_pwd"
                android:textColor="@color/backcolor"
                android:textSize="@dimen/content_font_size" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_register"
                android:textColor="@color/backcolor"
                android:textSize="@dimen/content_font_size" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>